<resources>
    <string name="app_name">Example Room Database</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="btn_add">Add</string>
    <string name="menu_btn_delete">Delete</string>
    <string name="text_btn_add">Save user</string>
    <string name="text_btn_update">Update user</string>

    <string name="text_snack_bar_success">Successfully added!</string>
    <string name="text_snack_bar_update">Successfully update!</string>
    <string name="text_snack_bar_error">Please fill out all fields.</string>
    <string name="text_snack_bar_delete">Successfully removed: %s</string>
    <string name="text_snack_bar_delete_all">Successfully removed everything</string>

    <string name="positive_btn_dialog">Yes</string>
    <string name="negative_btn_dialog">No</string>
    <string name="title_delete_user">Delete %s %s?</string>
    <string name="message_delete_user">Are you sure you want to delete %s?</string>
    <string name="title_delete_all">Delete everything</string>
    <string name="message_delete_all">Are you sure you want to delete everything?</string>

</resources>