<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName|textCapSentences">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/first_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
        app:layout_constraintStart_toStartOf="@+id/first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName|textCapSentences">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/last_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/last_name_layout"
        app:layout_constraintStart_toStartOf="@+id/last_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:hint="@string/hint_age"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_save_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:stateListAnimator="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/age_layout"
        app:layout_constraintTop_toBottomOf="@+id/age_layout"
        app:layout_constraintStart_toStartOf="@+id/age_layout">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/text_btn_add"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:singleLine="true">

        </com.google.android.material.textview.MaterialTextView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>